<resources>
    <string name="app_name">HAE</string>
    <string name="feed">피드</string>
    <string name="map">지도</string>
    <string name="crew">크루</string>
    <string name="profile">프로필</string>
    <string name="add_feed">피드 추가</string>
    <string name="add_gathering">활동 추가</string>
    <string name="something_to_say">하고 싶은 말이 있나요?</string>
    <string name="about_gathering">활동에 대해 한줄로 설명해주세요</string>
    <string name="add_image">이미지 추가</string>
    <string name="upload">게시</string>
    <string name="date">날짜</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="setting">설정하기</string>
    <string name="plz_crew_des">크루에 대해 소개해주세요</string>
    <string name="add_crew">크루 생성</string>
    <string name="add_crew_title">크루명 입력</string>
    <string name="write_comment">댓글을 입력하세요...</string>
    <string name="member">멤버</string>
    <string name="activity">활동</string>
    <string name="all_activity">총 활동</string>
    <string name="sign_in">가입하기</string>
    <string name="save">저장</string>
    <string name="distance200">200m</string>
    <string name="distance500">500m</string>
    <string name="distance1000">1km</string>
    <string name="show_comment">댓글 보기</string>
    <string name="quit_crew">크루 탈퇴</string>
    <string name="user_name">Username</string>
    <string name="id">ID</string>
    <string name="password">PassWord</string>
    <string name="login">로그인</string>
    <string name="hae_space_bar">How\nAbout\nExercise</string>
    <string name="hae_horizontal">How About Exercise</string>
    <string name="sign_up">회원가입</string>
    <string name="edit_user_info">회원정보수정</string>
    <string name="edit_finish">수정완료</string>
    <string name="popular_crew">인기 있는 크루</string>
    <string name="look_around_crew">크루 둘러보기</string>
    <string name="everyone_crew">누구에게나 적합한 크루가 있습니다</string>
    <string name="participate_in">참여하기</string>
    <string name="participate_now">참여 중</string>
    <string name="cancel">취소하기</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="really_leave">정말 탈퇴하시겠습니까?</string>
    <string name="judging_now_wait">위 사진에 대해 판단하고 있습니다.\n잠시만 기다려주세요.</string>
    <string name="judge_failed">판단에 실패했습니다.\n이미지를 재선택하거나 아래 보기 중 골라주세요.</string>
    <string name="touch_to_insert_img">터치 해서 이미지 삽입!</string>
    <string name="this_type_is">위 운동기구의 종류는 </string>
    <string name="it_is">입니다.</string>
    <string name="if_it_is_not_select">이(가) 아니라면 아래 보기 중 골라주세요.</string>
    <string name="save4">저장하기</string>
</resources>