<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_ask_again_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumsquare_b"
        android:textSize="18sp"
        android:text="@string/really_leave"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/style_top_1dp_aaa"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_ask_again_no_btn"
            android:background="@drawable/selector_btn_color_transparent_white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/no"
            android:gravity="center"
            android:fontFamily="@font/nanumsquare_b"/>
        <Button
            android:id="@+id/dialog_ask_again_yes_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:textColor="#ffffff"
            android:background="@drawable/selector_btn_color_primary"
            android:gravity="center"
            android:fontFamily="@font/nanumsquare_b"/>
    </LinearLayout>

</LinearLayout>