<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGatheringActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/style_bottom_bababa_1dp_solid_fff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/nanumsquare_eb"
            android:textSize="18sp"
            android:text="@string/add_gathering"/>

        <TextView
            android:id="@+id/add_gathering_btn"
            android:clickable="true"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/nanumsquare_b"
            android:text="@string/upload"
            android:background="@drawable/selector_btn_color_transparent_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="10dp"
            android:gravity="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare_r"
            android:text="@string/date"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/add_gathering_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare_r"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="100dp"/>

        <Button
            android:id="@+id/add_gathering_date_set_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="12sp"
            android:fontFamily="@font/nanumsquare_r"
            android:text="@string/setting"
            android:layout_marginRight="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/style_bottom_bababa_1dp_solid_fff"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare_r"
            android:text="@string/start_time"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/add_gathering_st_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:fontFamily="@font/nanumsquare_r"
            android:layout_marginLeft="100dp"/>

        <Button
            android:id="@+id/add_gathering_st_time_set_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="@font/nanumsquare_r"
            android:textSize="12sp"
            android:text="@string/setting"
            android:layout_marginRight="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/add_gathering_title_editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:textColorHint="#cecece"
        android:fontFamily="@font/nanumsquare_r"
        android:padding="20dp"
        android:hint="@string/about_gathering"
        android:gravity="top"/>



</LinearLayout>