<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCrewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/style_bottom_bababa_1dp_solid_fff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/nanumsquare_eb"
            android:textSize="18sp"
            android:text="@string/add_crew"/>


        <TextView
            android:id="@+id/add_crew_add_img_btn"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/nanumsquare_b"
            android:text="@string/add_image"
            android:background="@drawable/selector_btn_color_transparent_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_crew_upload_btn"
            android:layout_marginRight="10dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/add_crew_upload_btn"
            android:clickable="true"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/nanumsquare_b"
            android:text="@string/upload"
            android:background="@drawable/selector_btn_color_transparent_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="10dp"
            android:gravity="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/style_bottom_bababa_1dp_solid_fff"
        android:paddingBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_crew_title_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add_crew_title"
            android:singleLine="true"
            android:nextFocusDown="@id/add_crew_des_editText"
            android:background="#ffffff"
            android:textColorHint="#cecece"
            android:fontFamily="@font/nanumsquare_r"
            android:padding="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/add_crew_des_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColorHint="#cecece"
                android:fontFamily="@font/nanumsquare_r"
                android:padding="20dp"
                android:hint="@string/plz_crew_des"
                android:gravity="top"/>
            <ImageView
                android:id="@+id/add_crew_img"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:maxHeight="250dp"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>