<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".AddMarkerActivity">


    <ImageView
        android:id="@+id/add_marker_page_Image_add_btn"
        android:clickable="true"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/selector_dash_5dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/icon_add_transparent"
        android:scaleType="centerCrop"
        android:padding="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"/>

    <ImageView
        android:visibility="gone"
        android:id="@+id/add_marker_page_Image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/add_marker_page_touch_notice_dont_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumsquare_r"
        app:layout_constraintTop_toBottomOf="@id/add_marker_page_Image_add_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/touch_to_insert_img"/>

    <TextView
        android:id="@+id/add_marker_page_wait_text"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_marker_page_touch_notice_dont_use"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nanumsquare_b"
        android:textSize="15sp"
        android:text="@string/judging_now_wait"
        android:gravity="center"/>

    <TextView
        android:id="@+id/add_marker_page_fail_text"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_marker_page_touch_notice_dont_use"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nanumsquare_b"
        android:textSize="15sp"
        android:text="@string/judge_failed"
        android:gravity="center"/>


    <LinearLayout
        android:id="@+id/add_marker_page_type_notice_layout"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_marker_page_touch_notice_dont_use"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquare_b"
                android:textSize="15sp"
                android:text="@string/this_type_is"/>
            <TextView
                android:id="@+id/add_marker_page_type_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/nanumsquare_b"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:text="철봉"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquare_b"
                android:textSize="15sp"
                android:text="@string/it_is"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/add_marker_page_type_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquare_b"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:text="철봉"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquare_b"
                android:textSize="15sp"
                android:text="@string/if_it_is_not_select"/>
        </LinearLayout>


    </LinearLayout>

    <Spinner
        android:id="@+id/add_marker_page_spinner"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/add_marker_page_touch_notice_dont_use"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:layout_marginTop="85dp"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:spinnerMode="dropdown"/>




    <Button
        android:id="@+id/add_marker_page_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/save4"
        android:textColor="#fff"
        android:textSize="20sp"
        android:fontFamily="@font/nanumsquare_b"
        android:background="@drawable/selector_btn_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>