<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/nanumsquare_b"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/edit_user_info"
        android:textSize="23sp"
        android:textColor="#fff"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_user_page_img_outLine"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/style_radius_75_color_primary">
        <ImageView
            android:id="@+id/edit_user_page_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/human"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:adjustViewBounds="true"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_page_userName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:singleLine="true"
            android:hint="@string/user_name"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/edit_user_page_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn_color_primary_radius5"
        android:fontFamily="@font/nanumsquare_b"
        android:text="@string/edit_finish"
        android:textColor="#ffffff"
        android:textSize="17sp" />

</LinearLayout>